--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,10 +1,114 @@
-footer{
+footer {
     margin: 0 auto;
-
     max-width: 1700px;
 
-    & #footer-container{
+    & #footer-container {
         margin-left: 450px;
-        width: calc(100% - 450px);
+
+        & #footer-container-content {
+            display: flex;
+            padding: 50px 100px 20px 100px;
+            border: 1px solid var(--primary-color-light);
+            border-radius: 30px 30px 0 0;
+            background-color: var(--black);
+            border-bottom: 0;
+            width: 100%;
+
+            & #footer-container-content-left {
+                width: 40%;
+
+                & h4:first-child {
+                    margin-bottom: 10px;
+                }
+            }
+
+            & #footer-container-content-mid {
+                width: 20%;
+
+                & h4 {
+                    margin-bottom: 10px;
+                }
+
+                & a {
+                    & p {
+                        margin-bottom: 5px;
+                        transition: 0.2s ease-out;
+
+                    }
+
+                    &:hover p {
+                        color: var(--primary-color);
+                    }
+                }
+            }
+
+            & #footer-container-content-right {
+                width: 40%;
+
+                & h4 {
+                    margin-bottom: 10px;
+                }
+
+                & #footer-container-content-right-links {
+                    display: grid;
+                    grid-template-columns: repeat(3, 1fr);
+
+                    & .footer-container-content-right-links-link {
+                        display: flex;
+                        align-items: center;
+                        margin-right: 20px;
+                        margin-bottom: 10px;
+
+                        & p{
+                            transition: 0.2s ease-out;
+
+                        }
+                        &:hover p {
+                            color: var(--primary-color);
+                        }
+
+                        & img {
+                            height: 30px;
+                            margin-right: 10px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width: 992px) {
+    footer{
+        width: 100%;
+
+        & #footer-container{
+            margin: 0;
+        }
+    }
+}
+@media (max-width: 576px) {
+    footer{
+
+        & #footer-container{
+            & h2{
+                display: none;
+            }
+            & #footer-container-content{
+                flex-direction: column;
+                justify-content: center;
+                padding: 20px 50px 20px 50px;
+
+                & #footer-container-content-left, #footer-container-content-mid, #footer-container-content-right{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    width: 100%;
+                    margin-bottom: 20px;
+                }
+                & #footer-container-content-right{
+                    width: 100%;
+                }
+            }
+        }
     }
 }
