--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,4 +1,4 @@
-#mobile{
+#mobile {
     display: flex;
     flex-direction: column;
     position: fixed;
@@ -14,9 +14,16 @@
     background-position: center;
     border: 3px solid var(--primary-color-light);
     border-radius: 45px;
+
+    z-index: 999;
+
 }
 
-#mobile #mobile-top{
+#mobile p{
+    color: #ffffff !important;
+}
+
+#mobile #mobile-top {
     position: absolute;
     top: 0;
     left: 0;
@@ -26,7 +33,8 @@
     display: flex;
     justify-content: space-between;
 }
-#mobile #mobile-top #mobile-top-left{
+
+#mobile #mobile-top #mobile-top-left {
     display: flex;
     align-items: end;
     justify-content: center;
@@ -34,10 +42,12 @@
     width: 60px;
     padding-bottom: 2px;
 }
-#mobile #mobile-top #mobile-top-left p{
+
+#mobile #mobile-top #mobile-top-left p {
     font-weight: 400;
 }
-#mobile #mobile-top #mobile-top-mid{
+
+#mobile #mobile-top #mobile-top-mid {
     width: 180px;
     height: 100%;
 
@@ -45,10 +55,12 @@
     background-color: #000000;
     border-radius: 0 0 15px 15px;
 }
-#mobile #mobile-top #mobile-top-mid div:first-child{
+
+#mobile #mobile-top #mobile-top-mid div:first-child {
 
 }
-#mobile #mobile-top #mobile-top-mid #mobile-top-mid-speaker{
+
+#mobile #mobile-top #mobile-top-mid #mobile-top-mid-speaker {
     position: absolute;
     background-color: #161616;
     height: 8px;
@@ -59,7 +71,8 @@
 
     transform: translate(-50%, -50%);
 }
-#mobile #mobile-top #mobile-top-mid #mobile-top-mid-cam{
+
+#mobile #mobile-top #mobile-top-mid #mobile-top-mid-cam {
     position: absolute;
     background-color: #09071E;
     height: 10px;
@@ -70,7 +83,8 @@
 
     transform: translate(-50%, -50%);
 }
-#mobile #mobile-top #mobile-top-right{
+
+#mobile #mobile-top #mobile-top-right {
     display: flex;
     align-items: end;
     justify-content: space-between;
@@ -79,38 +93,44 @@
     padding-bottom: 2px;
 }
 
-#mobile #mobile-mid{
+#mobile #mobile-mid {
     width: 100%;
     height: 100%;
     /*background-color: var(--primary-color-light);*/
     padding: 71px 27px 27px;
 }
-#mobile #mobile-mid .mobile-mid-row{
+
+#mobile #mobile-mid .mobile-mid-row {
     display: flex;
     justify-content: space-between;
     margin-bottom: 27px;
     width: 100%;
 }
-#mobile #mobile-mid .mobile-mid-row .mobile-mid-app{
+
+#mobile #mobile-mid .mobile-mid-row .mobile-mid-app {
     width: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-#mobile #mobile-mid .mobile-mid-row .mobile-mid-app img{
+
+#mobile #mobile-mid .mobile-mid-row .mobile-mid-app img {
     width: 60px;
     height: 60px;
+    border-radius: 15px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-#mobile #mobile-mid .mobile-mid-row .mobile-mid-app .mini{
+
+#mobile #mobile-mid .mobile-mid-row .mobile-mid-app .mini {
     text-align: center;
     border-radius: 15px;
     margin-top: 5px;
     font-weight: 400;
 }
-#mobile #mobile-mid #mobile-mid-row-bottom{
+
+#mobile #mobile-mid #mobile-mid-row-bottom {
     position: absolute;
     padding: 0 27px;
     margin-bottom: 0;
@@ -119,7 +139,8 @@
     transform: translateX(-50%);
     z-index: 1;
 }
-#mobile #mobile-mid #mobile-mid-darkness-bottom{
+
+#mobile #mobile-mid #mobile-mid-darkness-bottom {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.4);
     bottom: 11px;
@@ -130,16 +151,58 @@
     transform: translateX(-50%);
 }
 
-
-.test{
-    width: 100%;
-    height: 100%;
-    /*background-color: var(--primary-color-light);*/
+#toggle-mobile{
+    display: none;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    background-color: unset;
+    border: 0;
+    cursor: pointer;
 }
-/*
-app 60x60
-*/
 
+@media (max-width: 992px) {
+    #toggle-mobile{
+        display: unset;
+        z-index: 800;
+    }
+    #mobile {
+        position: fixed;
+        top: 50%;
+        right: 0;
+        transform: translateX(110%) translateY(-50%);
+        transition: transform 0.3s ease;
+    }
 
+    #mobile.active {
+        transform: translateX(-20px) translateY(-50%);
+    }
 
+    #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* zesedění pozadí */
+        z-index: 998; /* pod menu (#mobile) s vyšším z-indexem */
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease;
+    }
 
+    /* Aktivní stav overlay */
+    #overlay.active {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    /* Blokování scrollu */
+    body.no-scroll {
+        overflow: hidden;
+    }
+
+}
