Still changing language packages, almost done, doing Work & Edu

--- a/public/css/about-me.css
+++ b/public/css/about-me.css
@@ -30,6 +30,11 @@
                     line-height: 1.5;
 
                 }
+
+                & ul li{
+                    list-style: circle !important;
+                    margin-left: 20px;
+                }
             }
         }
 
