--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -70,6 +70,7 @@ footer {
                         & img {
                             height: 30px;
                             margin-right: 10px;
+                            border-radius: 10px;
                         }
                     }
                 }
