--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -127,7 +127,7 @@
     text-align: center;
     border-radius: 15px;
     margin-top: 5px;
-    font-weight: 400;
+    font-weight: 400 !important;
 }
 
 #mobile #mobile-mid #mobile-mid-row-bottom {
