--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -38,6 +38,7 @@
                         height: 40px;
                         width: 40px;
                         border-radius: 50%;
+                        border: none;
                     }
                 }
             }
@@ -68,7 +69,8 @@
                 & img {
                     order: 1;
                     margin-bottom: 20px;
-                    height: 350px;
+                    height: auto;
+                    max-height: 300px;
                     width: 100%;
                 }
                 & .projects-row-text{
