--- a/public/css/home.css
+++ b/public/css/home.css
@@ -192,10 +192,12 @@
             }
 
             & .projects-row-text-links {
+                margin-top: 20px;
                 & img {
-                    height: 40px;
-                    width: 40px;
+                    height: 30px;
+                    width: 30px;
                     border-radius: 50%;
+                    margin-right: 10px;
                 }
             }
         }
