--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -8,7 +8,7 @@
     width: 370px;
     height: 820px;
 
-    background-image: url(../images/mobile/wallpapers/wallpaper_dark.png);
+    background-image: url(../images/mobile/wallpapers/wallpaper_dark.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -22,6 +22,7 @@
 #mobile p{
     color: #ffffff !important;
     font-weight: 400 !important;
+    font-size: 0.75rem !important;
 
 }
 
@@ -173,14 +174,14 @@
     }
     #mobile {
         position: fixed;
-        top: 50%;
+        top: 10px;
         right: 0;
-        transform: translateX(110%) translateY(-50%);
+        transform: translateX(120%) translateY(0%);
         transition: transform 0.3s ease;
     }
 
     #mobile.active {
-        transform: translateX(-20px) translateY(-50%);
+        transform: translateX(-20px) translateY(0%);
     }
 
     #overlay {
@@ -207,4 +208,11 @@
         overflow: hidden;
     }
 
+}
+@media (max-width: 576px) {
+    #mobile{
+        scale: 0.8;
+        top: -5vh;
+
+    }
 }
